@@ -2,40 +2,36 @@ package canvas.model;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import canvas.controller.DrawAdapter;
 
 public class Composite implements Component {
     private List<Component> components = new ArrayList<>();
 
-    private Composite(List<Component> components) {
-        this.components = components;
-    }
-
-    private Stream<Component> getOverlappingStream(Point p1, Point p2) {
-        return components.stream().filter(components -> components.isOverlapping(p1, p2));
-    }
-
     public void add(Component component) {
         components.add(component);
+    }
+
+    public void addFront(Component component) {
+        components.add(0, component);
     }
 
     public void remove(Component component) {
         components.remove(component);
     }
 
-    public Composite select(Point p1, Point p2) {
-        List<Component> selected = getOverlappingStream(p1, p2).toList();
-        return new Composite(selected);
+    public void ofList(List<Component> components) {
+        this.components = components;
     }
 
-    public Composite selectOne(Point p1) {
-        Optional<Component> selected = getOverlappingStream(p1, p1).findFirst();
-        return new Composite(selected.stream().toList());
+    public List<Component> get() {
+        return components;
+    }
+
+    public List<Component> filter(Predicate<Component> predicate) {
+        return components.stream().filter(predicate).collect(Collectors.toList());
     }
 
     @Override
@@ -54,12 +50,43 @@ public class Composite implements Component {
     }
 
     @Override
-    public boolean isOverlapping(Point p1, Point p2) {
-        return components.stream().anyMatch(component -> component.isOverlapping(p1, p2));
+    public void setText(String text) {
+        components.forEach(component -> component.setText(text));
+    }
+
+    @Override
+    public void setPath(String path) {
+        components.forEach(component -> component.setPath(path));
+    }
+
+    @Override
+    public boolean contains(Point p1, Point p2) {
+        return components.stream().anyMatch(component -> component.contains(p1, p2));
     }
 
     @Override
     public void draw(DrawAdapter adapter) {
         components.forEach(component -> component.draw(adapter));
+    }
+
+    @Override
+    public Integer getWidth() {
+        return components.stream().mapToInt(Component::getWidth).distinct().count() == 1
+                ? components.stream().mapToInt(Component::getWidth).findFirst().getAsInt()
+                : null;
+    }
+
+    @Override
+    public Integer getHeight() {
+        return components.stream().mapToInt(Component::getHeight).distinct().count() == 1
+                ? components.stream().mapToInt(Component::getHeight).findFirst().getAsInt()
+                : null;
+    }
+
+    @Override
+    public Color getColor() {
+        return components.stream().map(Component::getColor).distinct().count() == 1
+                ? components.stream().map(Component::getColor).findFirst().get()
+                : null;
     }
 }
